--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import DarkToggle from "../components/DarkToggle.astro";
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
@@ -25,6 +26,9 @@ const { title } = Astro.props;
       <DarkToggle />
     </div>
     <slot />
+
+    <Footer />
+
     <style is:global>
       :root {
         --accent: 124, 58, 237;
