--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,7 +61,7 @@ const { title } = Astro.props;
           #da62c4 30%,
           white 60%
         );
-        color: white;
+        color: rgb(250, 250, 250);
       }
 
       html {
@@ -69,7 +69,7 @@ const { title } = Astro.props;
       }
 
       [data-theme="light"] {
-        background-color: #fff;
+        background-color: rgb(250, 250, 250);
       }
 
       [data-theme="dark"] {
@@ -114,7 +114,7 @@ const { title } = Astro.props;
         background-color: #212121;
         padding: 1rem;
         border-radius: 0.4rem;
-        color: #fff;
+        color: rgb(250, 250, 250);
       }
 
       .instructions code {
