--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,21 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Cheatsheet list for developers. Made by the community, for the community." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@dhravyashah" />
+    <meta name="twitter:title" content="Cheatsheets for developers" />
+    <meta name="twitter:description" content="Cheatsheet list for developers. Made by the community, for the community." />
+    <meta name="twitter:image" content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cheatsheets for developers" />
+    <meta property="og:description" content="Cheatsheet list for developers. Made by the community, for the community." />
+    <meta property="og:site_name" content="Cheatsheets for developers" />
+    <meta property="og:url" content="https://cheats.dhr.wtf" />
+    <meta property="og:image" content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true" />
+
   </head>
   <body>
     <!-- Dark mode toggle -->
