fixed css when theme isn't set

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -187,6 +187,8 @@ const { title } = Astro.props;
         margin: 0;
         font-size: 1.25rem;
         transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+                color: #111;
+        background-color: white;
       }
       [data-theme="dark"] .link-card > a {
         color: #fff;
