--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,19 +19,33 @@ const { title } = Astro.props;
     <title>{title}</title>
 
     <!-- SEO -->
-    <meta name="description" content="Cheatsheet list for developers. Made by the community, for the community." />
+    <meta
+      name="description"
+      content="Cheatsheet list for developers. Made by the community, for the community."
+    />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@dhravyashah" />
     <meta name="twitter:title" content="Cheatsheets for developers" />
-    <meta name="twitter:description" content="Cheatsheet list for developers. Made by the community, for the community." />
-    <meta name="twitter:image" content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true" />
+    <meta
+      name="twitter:description"
+      content="Cheatsheet list for developers. Made by the community, for the community."
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Cheatsheets for developers" />
-    <meta property="og:description" content="Cheatsheet list for developers. Made by the community, for the community." />
+    <meta
+      property="og:description"
+      content="Cheatsheet list for developers. Made by the community, for the community."
+    />
     <meta property="og:site_name" content="Cheatsheets for developers" />
     <meta property="og:url" content="https://cheats.dhr.wtf" />
-    <meta property="og:image" content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true" />
-
+    <meta
+      property="og:image"
+      content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true"
+    />
   </head>
   <body>
     <!-- Dark mode toggle -->
@@ -115,7 +129,7 @@ const { title } = Astro.props;
       .instructions {
         line-height: 1.6;
         margin: 1rem 0;
-        border: 1px solid rgba(var(--accent), 25%);
+        border: 5px solid rgba(var(--accent), 25%);
         background-color: white;
         padding: 1rem;
         border-radius: 0.4rem;
@@ -125,7 +139,7 @@ const { title } = Astro.props;
       [data-theme="dark"] .instructions {
         line-height: 1.6;
         margin: 1rem 0;
-        border: 1px solid rgba(var(--accent), 25%);
+        border: 5px solid rgba(var(--accent), 25%);
         background-color: #212121;
         padding: 1rem;
         border-radius: 0.4rem;
@@ -154,24 +168,23 @@ const { title } = Astro.props;
         display: flex;
         padding: 1rem;
         background-color: white;
-        background-image: var(--accent-gradient);
         background-size: 400%;
-        border-radius: 0.5rem;
+        border-radius: 5px;
         background-position: 100%;
         transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
           0 2px 4px -2px rgba(0, 0, 0, 0.1);
-        text-transform: capitalize;
       }
 
       /* Dark mode */
       [data-theme="dark"] .search-bar {
         background-color: #212121;
-        background-image: var(--accent-gradient);
+        /* background-image: var(--accent-gradient); */
         background-size: 400%;
         border-radius: 0.5rem;
         background-position: 0%;
         transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+        border: 5px solid rgba(var(--accent), 25%);
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
           0 2px 4px -2px rgba(0, 0, 0, 0.1);
         text-transform: capitalize;
@@ -187,7 +200,7 @@ const { title } = Astro.props;
         margin: 0;
         font-size: 1.25rem;
         transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-                color: #111;
+        color: #111;
         background-color: white;
       }
       [data-theme="dark"] .link-card > a {
