utilise more area on screen

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -159,12 +159,13 @@ const { title } = Astro.props;
       }
       .link-card-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
         gap: 1rem;
         padding: 0;
       }
       .search-bar {
-        list-style: none;
+        width: 100%;
+        margin-bottom: 20px;
         display: flex;
         padding: 1rem;
         background-color: white;
