--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,8 @@ const filenames = files.map((file) =>
       efficiency. This well curated list will save you time when you just can't
       remember the code.
     </p>
+    <input class="search-bar" type="text" id="search" placeholder="Search..." />
     <ul role="list" class="link-card-grid">
-      <input
-        class="search-bar"
-        type="text"
-        id="search"
-        placeholder="Search..."
-      />
       {
         filenames.map((item) => (
           <li class="card-ele">
@@ -43,7 +38,7 @@ const filenames = files.map((file) =>
   main {
     margin: auto;
     padding: 1.5rem;
-    max-width: 60ch;
+    max-width: 70ch;
   }
   h1 {
     font-size: 3rem;
