--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,8 +14,8 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2"  />
     <title>{title}</title>
 
     <!-- SEO -->
@@ -44,7 +44,7 @@ const { title } = Astro.props;
     <meta property="og:url" content="https://cheats.dhr.wtf" />
     <meta
       property="og:image"
-      content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true"
+      content="/android-chrome-512x512.png"
     />
   </head>
   <body>
