fixed content url

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
     />
     <meta
       name="twitter:image"
-      content="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/assets/CheatSheet.png?raw=true"
+      content="https://cheats.dhr.wtf/android-chrome-512x512.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Cheatsheets for developers" />
