--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2"  />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2"  />
     <title>{title}</title>
 
     <!-- SEO -->
