added navbar, changed description, slightly changed UI

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,11 @@
 <footer class="p-4 rounded-lg shadow md:px-6 md:py-8">
   <div class="sm:flex sm:items-center sm:justify-between">
     <a href="https://cheats.dhr.wtf" class="flex items-center mb-4 sm:mb-0">
+
+      <img src="/android-chrome-512x512.png" alt="Logo" class="w-8 h-8 mr-2">
+
       <span class="self-center text-2xl font-semibold whitespace-nowrap"
-        >Cheatsheets for developers</span
+        ><span class="text-gradient">Cheatsheets</span> for developers</span
       >
     </a>
     <ul
@@ -12,13 +15,22 @@
         <a href="/" class="mr-4 hover:underline md:mr-6">Home</a>
       </li>
       <li>
-        <a href="https://github.com/aryankashyap7/CheatSheets-for-Developers/" class="mr-4 hover:underline md:mr-6">Github</a>
+        <a
+          href="https://github.com/aryankashyap7/CheatSheets-for-Developers/"
+          class="mr-4 hover:underline md:mr-6">Github</a
+        >
       </li>
       <li>
-        <a href="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/LICENSE" class="mr-4 hover:underline md:mr-6">Licensing</a>
+        <a
+          href="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/LICENSE"
+          class="mr-4 hover:underline md:mr-6">Licensing</a
+        >
       </li>
       <li>
-        <a href="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/docs/CONTRIBUTING.md" class="hover:underline">Contribute</a>
+        <a
+          href="https://github.com/aryankashyap7/CheatSheets-for-Developers/blob/main/docs/CONTRIBUTING.md"
+          class="hover:underline">Contribute</a
+        >
       </li>
     </ul>
   </div>
@@ -27,10 +39,15 @@
     <a href="https://github.com/aryankashyap7/CheatSheets-for-Developers/">
       Open source. Made with 💖 by
     </a>
-    <a class="text-blue-400" href="https://github.com/aryankashyap7">Aryan Kashyap</a>,
+    <a class="text-blue-400" href="https://github.com/aryankashyap7"
+      >Aryan Kashyap</a
+    >,
     <a class="text-blue-500" href="https://github.com/dhravya">Dhravya</a>,
-    <a href="https://github.com/aryankashyap7/CheatSheets-for-Developers/graphs/contributors" class="text-yellow-500">
-        and contributors
+    <a
+      href="https://github.com/aryankashyap7/CheatSheets-for-Developers/graphs/contributors"
+      class="text-yellow-500"
+    >
+      and contributors
     </a>
   </span>
 </footer>
