--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Nav from "../components/Nav.astro";
 
 const files = await Astro.glob("../pages/sheet/*.md");
 
@@ -11,12 +12,11 @@ const filenames = files.map((file) =>
 ---
 
 <Layout title="Cheatsheets for developers">
+  <Nav />
   <main>
-    <h1><span class="text-gradient">Cheatsheets</span> for Developers</h1>
+    <h1><span class="text-gradient">Forgot</span> something?</h1>
     <p class="instructions">
-      This Cheat sheet list has been made to enhance the workflow and
-      efficiency. This well curated list will save you time when you just can't
-      remember the code.
+      Cheatsheets for developers is a collection of community-made cheatsheets so that you can learn and remember everything you need to know about your favorite programming languages, frameworks, and tools.
     </p>
     <input class="search-bar" type="text" id="search" placeholder="Search..." />
     <ul role="list" class="link-card-grid">
