--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,13 @@ const { title } = Astro.props;
     <meta property="og:site_name" content="Cheatsheets for developers" />
     <meta property="og:url" content="https://cheats.dhr.wtf" />
     <meta property="og:image" content="/android-chrome-512x512.png" />
+
+    <script
+      async
+      defer
+      data-website-id="c46d9a62-ef91-4793-a170-3ee5eb8a6a44"
+      src="https://umami.dhravya.dev/umami.js"
+    ></script>
   </head>
   <body>
     <slot />
