--- a/src/layouts/CheatSheet.astro
+++ b/src/layouts/CheatSheet.astro
@@ -31,22 +31,24 @@ const {
       </h1>
       <slot />
     </article>
-    <script
-      src="https://giscus.app/client.js"
-      data-repo="dhravya/Cheatsheets-for-developers"
-      data-repo-id="R_kgDOIVF18w"
-      data-category="Announcements"
-      data-category-id="DIC_kwDOIVF1884CST11"
-      data-mapping="pathname"
-      data-strict="0"
-      data-reactions-enabled="1"
-      data-emit-metadata="0"
-      data-input-position="top"
-      data-theme="dark"
-      data-lang="en"
-      data-loading="lazy"
-      crossorigin="anonymous"
-      async
-    ></script>
+  </div>
+
+  <div class="mx-5 mt-5">
+      <script
+    src="https://giscus.app/client.js"
+    data-repo="dhravya/Cheatsheets-for-developers"
+    data-repo-id="R_kgDOIVF18w"
+    data-category="Announcements"
+    data-category-id="DIC_kwDOIVF1884CST11"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="dark"
+    data-lang="en"
+    crossorigin="anonymous"
+    async
+  ></script>
   </div>
 </Layout>
