--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -27,6 +27,8 @@ const { href, title } = Astro.props;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -2px rgba(0, 0, 0, 0.1);
     text-transform: capitalize;
+    text-align: center;
+    white-space: nowrap;
   }
 
   p {
